fix: stretch card component

--- a/src/index.css
+++ b/src/index.css
@@ -1,5 +1,14 @@
 @import "tailwindcss";
 
-html, body {
+html,
+body,
+#root {
+  height: 100%;
+  margin: 0;
+}
+
+html,
+body {
   font-family: Arial, Helvetica, sans-serif;
+  overflow: hidden;
 }
